--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,44 @@
 body {
-    font-family: helvetica;
     background-color: #525252;
     color: whitesmoke;
+    font-family: 'Cutive Mono', monospace;
+    font-weight: 700;
+    display: flex;
+}
+
+h1 {
+    font-family: 'Special Elite', cursive;
+    font-size: 60px;
+    font-weight: 200;
+    margin: 0;
+}
+
+h2 {
+    margin: 0 0 20px 0;
+}
+
+#controls {
+    display: flex;
+    flex: auto;
+    margin-top: 10px;
 }
 
 button {
     margin: 0 10px 0 0;
+    padding: 10px 8px 8px 8px;
+    font-family: 'Special Elite', cursive;
+    background-image: url(../images/gravel.jpg);
+    color: white;
+    border-radius: 3px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex: none
 }
 
-#body {
+#game {
     display: grid;
     position: relative;
-    margin: 100px 0 0 100px;
+    margin: 10% 0 0 10%;
     z-index: 1;
 }
 
@@ -20,12 +47,14 @@ button {
 }
 
 #alertDiv {
-    background: lightslategray;
-    border: black solid;
+    background: rgb(86, 99, 111);
+    border: gray solid;
     position: absolute;
-    margin: 110px 0 0 120px;
+    margin: 15% 0 0 15%;
     width: 60%;
     z-index: 2;
     padding: 10px;
-    display: block
+    display: block;
+    filter: drop-shadow(0px 0px 30px black);
+    border-radius: 4px;
 }
