--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     color: whitesmoke;
     font-family: 'Cutive Mono', monospace;
     font-weight: 700;
+    font-size: 20px;
     display: flex;
 }
 
@@ -14,7 +15,7 @@ h1 {
 }
 
 h2 {
-    margin: 0 0 20px 0;
+    margin: 0 0 15px 0;
 }
 
 #controls {
@@ -24,15 +25,16 @@ h2 {
 }
 
 button {
+    font-family: 'Special Elite', cursive;
+    flex-wrap: wrap;
+    flex: none;
     margin: 0 10px 0 0;
     padding: 10px 8px 8px 8px;
-    font-family: 'Special Elite', cursive;
-    background-image: url(../images/gravel.jpg);
     color: white;
+    background-image: url(../images/gravel.jpg);
     border-radius: 3px;
     justify-content: flex-start;
-    flex-wrap: wrap;
-    flex: none
+    background-position: center;
 }
 
 #game {
