--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,10 @@ button {
     margin: 15% 0 0 15%;
     width: 50%;
     z-index: 2;
-    padding: 10px;
-    display: block;
+    padding: 15px;
+    display: none;
     filter: drop-shadow(0px 0px 30px black);
     border-radius: 7px;
-    display: flex;
     gap: 10px;
 }
 
