added progress bar

--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,22 @@ button {
 #pauseDiv {
     margin-top: 15px;
 }
+
+#seasonDisplay {
+
+}
+
+#progressBarBorder{
+    display: none;
+    height: 50px;
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 7px;
+    margin-top: 15px 0 0 0;
+}
+
+#progressBar{
+    height: 100%;
+    background: black;
+}
