--- a/css/style.css
+++ b/css/style.css
@@ -93,10 +93,14 @@ button {
     border-style: solid;
     border-width: 2px;
     border-radius: 7px;
-    margin-top: 15px 0 0 0;
+    margin-top: 15px;
 }
 
 #progressBar{
     height: 100%;
     background: black;
+}
+
+#progressBarText {
+    padding: 2px 0 0 10px;
 }
